updated browser dev tools gif to image

--- a/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
+++ b/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
@@ -40,7 +40,7 @@ console.log("my custom message")
 
 Since Cypress runs in the browser, you have full access to all of the information from your browser's developer tools. This means you can use the same techniques and functionality you are used to using when debugging issues with your application code to debug your failing Cypress tests too.
 
-![](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-dev-tools.gif)
+![](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-dev-tools.png)
 
 ## Practice
 
