--- a/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
+++ b/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
@@ -20,9 +20,9 @@ You can pass in which browser you would like Cypress to run in via the command l
 cypress run --browser Firefox
 ```
 
-You can also select which browser to run via the UI by selecting it in the dropdown like so:
+You can also select which browser to run via the UI.
 
-![](/images/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports/Screen_Shot_2021-08-31_at_9.16.07_AM.png)
+![](/images/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports/choose-a-browser.png)
 
 You can even do this on a test by test basis by passing an [options object to your tests](https://docs.cypress.io/guides/guides/cross-browser-testing#Running-Specific-Tests-by-Browser).
 
