--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -101,7 +101,7 @@ npm run dev
 
 ![Screen Shot 2022-06-28 at 8.21.11 AM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-28_at_8.21.11_AM.png)
 
-Then you can open your web browser and enter [localhost:300](http://localhost:300)0 in the address bar to see the app.
+Then you can open your web browser and enter [localhost:3000](http://localhost:3000) in the address bar to see the app.
 
 ![Screen Shot 2022-06-28 at 8.22.10 AM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-28_at_8.22.10_AM.png)
 
