--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
@@ -254,7 +254,7 @@ First, we are using `cy.get()` to get the `h1` element on our home page.
 
 Next, we are [chaining](https://learn.cypress.io/cypress-fundamentals/command-chaining) another command called [contains](https://docs.cypress.io/api/commands/contains) onto the `cy.get()` which accepts a string. We are passing into the [contains command](https://docs.cypress.io/api/commands/contains) a string of text which we expect to be inside of the `h1` element.
 
-Command changing is when you “chain” multiple commands off of one another. This is incredibly powerful and you will see this a lot in Cypress tests. Throughout this course, you will see countless examples of this, but we wanted to bring it to your attention early on.
+Command chaining is when you “chain” multiple commands off of one another. This is incredibly powerful and you will see this a lot in Cypress tests. Throughout this course, you will see countless examples of this, but we wanted to bring it to your attention early on.
 
 If you would like to learn more about command chaining, we have a lesson on that [here](https://learn.cypress.io/cypress-fundamentals/command-chaining).
 
