--- a/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
@@ -70,13 +70,13 @@ describe("home page", () => {
 })
 ```
 
-As you can see by using context we can wrap all of the tests related to the hero section of our home page together which makes it quick and easy for anyone reading this spec file to know that these tests are for the hero section of our home page.
+As you can see, by using context we can wrap all of the tests related to the hero section of our home page together, which makes it quick and easy for anyone reading this spec file to know that these tests are for the hero section of our home page.
 
 If we run our tests, everything is still passing.
 
 ![Screen Shot 2022-07-12 at 8.34.26 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.34.26_AM.png)
 
-Also, when you are running your tests in headless mode, which is how then will run in Continuous Integration, you will see the following in the output.
+Also, when you are running your tests in headless mode, which is how they will run in Continuous Integration, you will see the following in the output.
 
 ![Screen Shot 2022-07-12 at 8.36.33 AM.png](/images/testing-your-first-application/how-to-test-multiple-pages/Screen_Shot_2022-07-12_at_8.36.33_AM.png)
 
