--- a/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
@@ -74,7 +74,7 @@ Now if we launch cypress and run our test should still be passing.
 You can click on the images to enlarge them.
 :::
 
-In case that explanation went to fast or was not very clear, we have created a short video that explains in-depth how our custom Cypress command works.
+In case that explanation went too fast or was not very clear, we have created a short video that explains in-depth how our custom Cypress command works.
 
 <YouTube id="5F7t9IPoUvo" />
 
