--- a/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
+++ b/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
@@ -128,7 +128,7 @@ Finally we click the Sign Up button to create our new user account.
 cy.getBySel("signup-submit").click()
 ```
 
-We will use <apiLink apiName="wait" displayName="cy.wait()" /> to wait on our intercept which we aliased to `@signup` in the `beforeEach()` hook, to ensure the
+We will use <apiLink apiName="wait" displayName="cy.wait()" /> to wait on our intercept which we aliased to `@signup` in the `beforeEach()` hook, to ensure that the user was created and saved in database before logging the user back in.
 
 ```js
 cy.wait("@signup")
