update-dashboard-references-to-cloud

--- a/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
+++ b/content/courses/advanced-cypress-concepts/running-cypress-in-ci.mdx
@@ -28,6 +28,6 @@ In our docs, we have several [examples](https://docs.cypress.io/guides/continuou
 - [Bitbucket Pipelines](https://docs.cypress.io/guides/continuous-integration/bitbucket-pipelines)
 - [AWS CodeBuild](https://docs.cypress.io/guides/continuous-integration/aws-codebuild)
 
-### Cypress Dashboard
+### Cypress Cloud
 
-The [Cypress Dashboard](https://www.cypress.io/dashboard/) increases test velocity while giving total visibility into tests running in your CI pipeline. It also provides automatic parallelization and load balancing, so your tests run incredibly fast.
+[Cypress Cloud](https://www.cypress.io/cloud/) increases test velocity while giving total visibility into tests running in your CI pipeline. It also provides automatic parallelization and load balancing, so your tests run incredibly fast.
