--- a/content/tutorials/next-js-and-shopify-store/deploying-to-vercel.mdx
+++ b/content/tutorials/next-js-and-shopify-store/deploying-to-vercel.mdx
@@ -42,4 +42,4 @@ You can then click on the “Visit” button to see your live application.
 
 ## Wrap Up
 
-In this tutorial, we learned how to create a custom Next.js front-end using Shopify as our back-end. We also learned how to test our app with Cypress. We then learned how to run our tests against each Pull Request with GitHub Actions. We then integrated the Cypress dashboard to have all of our tests run in parallel. Finally, we deployed our application live to Vercel.
+In this tutorial, we learned how to create a custom Next.js front-end using Shopify as our back-end. We also learned how to test our app with Cypress. We then learned how to run our tests against each Pull Request with GitHub Actions. We then integrated Cypress Cloud to have all of our tests run in parallel. Finally, we deployed our application live to Vercel.
