--- a/content/real-world-examples/new-transactions/verifying-the-deposit-of-a-payment.mdx
+++ b/content/real-world-examples/new-transactions/verifying-the-deposit-of-a-payment.mdx
@@ -79,7 +79,7 @@ const transactionPayload = {
 }
 ```
 
-Then, we grab the current balance from the UI, only if we are _not_ in a mobile viewport and store it inside of the `starteBalance` variable.
+Then, we grab the current balance from the UI, only if we are _not_ in a mobile viewport and store it inside of the `startBalance` variable.
 
 ```js
 // first let's grab the current balance from the UI
