Remove extra to from practice section

--- a/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
+++ b/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
@@ -54,7 +54,7 @@ it("comments on a transaction", () => {
 
 ## Practice
 
-If you would like to practice how to to use JavaScript in Cypress, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
+If you would like to practice how to use JavaScript in Cypress, we have created a special repo which can be found [here](https://github.com/cypress-io/cypress-realworld-testing-blog). The installation instructions are located in the **README.md** file.
 
 The practice file you are looking for can be found in **cypress/e2e/Practice/just-javascript.spec.js**.
 
