fix yarn install instructions for tutorial

--- a/content/tutorials/next-js-and-shopify-store/writing-end-to-end-tests-with-cypress.mdx
+++ b/content/tutorials/next-js-and-shopify-store/writing-end-to-end-tests-with-cypress.mdx
@@ -10,7 +10,7 @@ You can find our more about Cypress and how to install it on our [docs site](htt
 
 ```bash
 cd site
-yarn add cypress --save-dev
+yarn add cypress --dev
 ```
 
 Open up the `package.json` file and add the following scripts.
