--- a/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
+++ b/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
@@ -2,7 +2,7 @@
 
 ## Different Browsers
 
-Running all of your tests within [multiple browsers](https://docs.cypress.io/guides/guides/cross-browser-testing) and across various screen sizes is incredibly important. Currently, Cypress supports [Chrome-family browsers](https://docs.cypress.io/guides/guides/launching-browsers#Chrome-Browsers) (including Electron and Chromium-based Microsoft Edge) and Firefox.
+Running all of your tests within [multiple browsers](https://docs.cypress.io/guides/guides/cross-browser-testing) and across various screen sizes is incredibly important. Currently, Cypress supports [Chrome-family browsers](https://docs.cypress.io/guides/guides/launching-browsers#Chrome-Browsers) (including Electron and Chromium-based Microsoft Edge), [WebKit](https://docs.cypress.io/guides/guides/launching-browsers#WebKit-Experimental) (Safari's browser engine) and Firefox.
 
 You can also configure Cypress to run your tests within a specific window size with custom configurations. A great example of how to do this is in the [Real World App (RWA)](https://github.com/cypress-io/cypress-realworld-app). If you look at the [GitHub Actions workflow](https://github.com/cypress-io/cypress-realworld-app/blob/develop/.github/workflows/main.yml), we will run the tests within the RWA in Chrome Desktop, Chrome Mobile, Firefox Desktop, and Firefox Mobile.
 
