replace ssh clone instructions with https

--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -26,7 +26,7 @@ Running this command will download the repo on the “start” branch. It is ver
 :::
 
 ```bash
-git clone --branch start git@github.com:cypress-io/cypress-realworld-testing-course-app.git
+git clone --branch start https://github.com/cypress-io/cypress-realworld-testing-course-app.git
 ```
 
 ### Downloading a zip file
