--- a/content/real-world-examples/overview/cypress-real-world-app-overview.mdx
+++ b/content/real-world-examples/overview/cypress-real-world-app-overview.mdx
@@ -9,7 +9,7 @@ You can find the repo [here](https://github.com/cypress-io/cypress-realworld-app
 You can clone the repo via the command line with:
 
 ```bash
-git clone git@github.com:cypress-io/cypress-realworld-app.git
+git clone https://github.com/cypress-io/cypress-realworld-app.git
 ```
 
 It might be best to first fork a copy of the repo and then clone the forked version.
